# tvtime-backup-extractor

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.txt  requirements-macos-build.txt  requirements-source-build.txt  requirements.txt
.github/workflows/: ci.yml
docs/: linux.md  macos.md  output-reference.md  privacy.md  refract-import.md  release-v0.2.0.md  troubleshooting.md  windows.md
macos/: Package.resolved  Package.swift
macos/Bundle/: AppIcon.icns  Info.plist  THIRD_PARTY_NOTICES.md  TVTimeHelper-Info.plist  TVTimeRecoveryHelperLocal.entitlements
macos/Bundle/NativeLicenses/: PROVENANCE.json
macos/Sources/TVTimeRecoveryApp/: AppEnvironment.swift  ApplicationDelegate.swift  FolderPicker.swift  RecoveryRootView.swift  (+4 more)
script/: build_and_run.sh  build_local_app.sh  build_macos_helper.sh  build_python_distributions.py  build_release_app.sh  build_visual_report_fixture.py  collect_macos_licenses.py  convert_refract_series.py  generate_macos_release_manifest.py  git_source_stage.py  macos_packaging_lib.sh  scan_macos_release.py  sdist_metadata.py  smoke_packaged_helper.py  validate_pdf_render.swift  validate_recovery_output.py  verify_python_release.py
scripts/: analyze_tvtime.py  build_validation_catalog.py  extract_tvtime.py  macos_helper_entry.py
tests/: __init__.py  helpers.py  test_analysis_bounds_and_labels.py  test_analyze_report.py  test_analyzer_nofollow.py  test_cancellation_and_reports.py  test_cli.py  test_cli_recovery_e2e.py  test_raw_integrity.py  test_recovery_output_validator.py  test_refract_conversion.py  test_release_integrity.py  test_safety.py  test_security_hardening.py  test_service_protocol_e2e.py  test_smoke_packaged_helper.py  test_windows_native.py
tvtime_extractor/: __init__.py  analyze.py  cli.py  display_text.py  errors.py  extract.py  helper_main.py  integrity.py  models.py  protocol.py  refract.py  report.py  safety.py  service.py  visual_report.py  windows_native.py
(+24 files in other folders)
