[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tvtime-backup-extractor"
version = "0.2.0"
description = "Privacy-conscious extraction of TV Time data from authorized encrypted iOS backups"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
  { name = "Amir Brooks" },
]
keywords = ["ios", "iphone", "backup", "tv-time", "data-export"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Archiving :: Backup",
]
dependencies = [
  "iphone-backup-decrypt==0.9.0",
  "pycryptodome==3.23.0",
  "reportlab==5.0.0",
  "pillow==12.3.0",
  "charset-normalizer==3.4.9",
]

[project.optional-dependencies]
dev = [
  "build==1.5.0",
  "pypdf==6.14.2",
  "ruff==0.15.20",
]

[project.scripts]
tvtime-extractor = "tvtime_extractor.cli:entrypoint"
tvtime-extractor-helper = "tvtime_extractor.helper_main:entrypoint"

[project.urls]
Homepage = "https://github.com/amirbrooks/tvtime-backup-extractor"
Repository = "https://github.com/amirbrooks/tvtime-backup-extractor"
Documentation = "https://github.com/amirbrooks/tvtime-backup-extractor#readme"
Changelog = "https://github.com/amirbrooks/tvtime-backup-extractor/blob/main/CHANGELOG.md"
Issues = "https://github.com/amirbrooks/tvtime-backup-extractor/issues"
Security = "https://github.com/amirbrooks/tvtime-backup-extractor/security/policy"

[tool.setuptools.packages.find]
include = ["tvtime_extractor*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
